ecom/ecom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: 401311973432.dkr.ecr.us-east-1.amazonaws.com/django-app:latest
        ports:
        - containerPort: 8000
