ecom/ecom/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: django-service
# spec:
#   selector:
#     app: django-app
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 8000
#   type: NodePort  # Consider changing to LoadBalancer if you want direct ELB integration

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: LoadBalancer
  selector:
    app: django
  ports:
    - port: 80           # Port exposed externally (ELB)
      targetPort: 8000   # Port on the pod container (your Django app)
